fix alignment on h1

--- a/style.css
+++ b/style.css
@@ -7,6 +7,54 @@ body {
     padding: 0;
 }
 
+.yiddish {
+    direction: rtl;
+    text-align: right;
+}
+
+.english {
+    direction: ltr;
+    text-align: left;
+}
+
+.centered {
+    text-align: center;
+}
+
+/*project gallery*/
+
+.project-container {
+    display: flex;
+    flex-flow: row wrap;
+    max-height: 250rem;
+    align-content: center;
+    margin: 0.5rem;
+}
+
+figure {
+    width: 25rem;
+    border: black solid;
+    text-align: center;
+    margin: 0.5rem;
+
+}
+
+figure img {
+    margin-bottom: 1rem;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+}
+
+
+figcaption {
+    font-weight: bold;
+    font-size: 1.5rem;
+
+}
+
+
+
 header {
     border: black solid;
     color:rgb(207, 103, 17);
@@ -67,15 +115,7 @@ button {
     text-align: center;
 }
 
-.yiddish {
-    direction: rtl;
-    text-align: right;
-}
 
-.english {
-    direction: ltr;
-    text-align: left;
-}
 
 .hidden {
     display: none;
@@ -96,37 +136,7 @@ main a {
 
 
 
-/*project gallery*/
 
-.project-container {
-    display: flex;
-    flex-flow: row wrap;
-    max-height: 250rem;
-    align-content: center;
-    margin: 0.5rem;
-}
-
-figure {
-    width: 25rem;
-    border: black solid;
-    text-align: center;
-    margin: 0.5rem;
-
-}
-
-figure img {
-    margin-bottom: 1rem;
-    width: 100%;
-    height: auto;
-    z-index: 1;
-}
-
-
-figcaption {
-    font-weight: bold;
-    font-size: 1.5rem;
-
-}
 
 /* @media screen and (min-width: 768px) {
     .project-container{
